Integracion de flujo con Stripe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,7 @@ spring.mail.password=***********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+stripe.secret-key=******************
+
 # Server Configuration
 server.port=8080
