Se mejora visualizacion de correo para confirmar ticket de compra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,16 @@ spring.mail.password=***********
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-stripe.secret-key=******************
+# Stripe Key
+stripe.secret-key=*****************
+
+#Configuration Thymeleaf
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
 
 # Server Configuration
 server.port=8080
